Adding nav menu and intro

--- a/index.html
+++ b/index.html
@@ -13,10 +13,23 @@
 </head>
 
 <body>
-
+    <div class = "box">
+    <nav class="btn three">
+      <ul>
+        <li><a href="#" id="active">Hello!</a></li>
+        <li><a href="#">Recent Projects</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div id="intro">
+    <p class="block">
+      Hi my name is Yiyi. I'm a maker, designer and developer.
+      My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
+    </p>
+  </div>
   <!-- particles.js container -->
   <div id="particles-js"></div>
-  <div id="bm"</div>
+  <div id="bm"></div>
   <!-- stats - count particles -->
   <!-- <div class="count-particles">
     <span class="js-count-particles">--</span> particles </div> -->
