--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
 </head>
 
 <body>
-    <div class = "box">
+
+    <div class ="wrapper">
     <nav class="btn three">
       <ul>
         <li><a href="#" id="active">Hello!</a></li>
         <li><a href="#">Recent Projects</a></li>
       </ul>
     </nav>
-  </div>
-  <div id="intro">
-    <p class="block">
+    </div>
+
+    <div id="intro">
+      <p class="block">
       Hi my name is Yiyi. I'm a maker, designer and developer.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
-    </p>
-  </div>
-  <!-- particles.js container -->
-  <div id="particles-js"></div>
-  <div id="bm"></div>
-  <!-- stats - count particles -->
-  <!-- <div class="count-particles">
+      </p>
+    </div>
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
+    <div id="bm"></div>
+    <!-- stats - count particles -->
+    <!-- <div class="count-particles">
     <span class="js-count-particles">--</span> particles </div> -->
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
@@ -40,11 +42,4 @@
     <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
     <script  src="js/index.js"></script>
   </body>
-</html>
-
-
-
-
-</body>
-
 </html>
