--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Yiyi Shao</title>
-
-
-
-      <link rel="stylesheet" href="css/style.css">
-
-
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <div class ="wrapper">
     <nav class="btn three">
       <ul>
@@ -36,8 +30,8 @@
     <!-- <div class="count-particles">
     <span class="js-count-particles">--</span> particles </div> -->
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- stats.js lib -->
     <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
     <script  src="js/index.js"></script>
