--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
     <!-- particles.js container -->
     <div id="particles-js"></div>
     <div id="bm"></div>
-    <!-- stats - count particles -->
-    <!-- <div class="count-particles">
-    <span class="js-count-particles">--</span> particles </div> -->
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!-- stats.js lib -->
-    <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
