--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class ="wrapper">
     <nav class="btn three">
       <ul>
-        <li><a href="#" id="active">Hello!</a></li>
-        <li><a href="#">Recent Projects</a></li>
+        <li><a href="index.html" id="active">Hello!</a></li>
+        <li><a href="portfolio.html">Recent Projects</a></li>
       </ul>
     </nav>
     </div>
