Fix files name for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
       <div class="date">2019 April</div>
     </div>
   </div>
-  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital_1.jpg" alt=""/>
+  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">DiveIntoDigital</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -53,35 +53,35 @@
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert_1.jpg" alt=""/>
+  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert_1.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">Universe Concert</div>
       <div class="memo">Plymouth University, UK</div>
       <div class="date">2015</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.jpg" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.JPG" alt=""/>
     <div class="info-wrapper">
-      <div class="name">RABBOT</div>
+      <div class="name">Sleepers</div>
       <div class="memo">Social Body Lab, Toronto</div>
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.jpg" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">MoonGaze</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.jpg" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">LovMeLovU</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 December</div>
     </div>
   </div>
-  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.jpg" alt=""/>
+  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">PollHUEtion</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -95,7 +95,7 @@
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/Emolace/Emolace.jpg" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Emolace</div>
       <div class="memo">OCAD University, Toronto</div>
