Adding social media icons and inital page for projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,13 +17,23 @@
       </ul>
     </nav>
     </div>
+<div id ="introcontainer">
 
-    <div id="intro">
+    <div id = "icons" class="socialbtns">
+    <ul>
+    <li><a href="#" class="fa fa-lg fa-github"></a></li>
+    <li><a href="#" class="fa fa-lg fa-linkedin"></a></li>
+    <li><a href="#" class="fa fa-lg fa-instagram"></a></li>
+    </ul>
+    </div>
+
+    <div>
       <p class="block">
       Hi my name is Yiyi. I'm a maker, designer and developer.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
       </p>
     </div>
+</div>
     <!-- particles.js container -->
     <div id="particles-js"></div>
     <div id="bm"></div>
