--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,14 @@
 </div>
 <div class="wrap">
   <div class="grid-sizer"></div>
+  <a href="RABBOT.html">
   <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT_1.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">RABBOT</div>
       <div class="memo">Thesis project</div>
       <div class="date">2019 April</div>
     </div>
-  </div>
+  </div></a>
   <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">DiveIntoDigital</div>
