Adjust icons position

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <div id = "icons" class="socialbtns">
     <ul>
-    <li><a href="#" class="fa fa-lg fa-github"></a></li>
-    <li><a href="#" class="fa fa-lg fa-linkedin"></a></li>
-    <li><a href="#" class="fa fa-lg fa-instagram"></a></li>
+    <li><a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a></li>
+    <li><a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a></li>
+    <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
     </ul>
     </div>
 
