--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
@@ -40,7 +41,14 @@
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
     <script  src="js/index.js"></script>
+    <footer>
+      <div class="footer">
+      <small>&copy; Yiyi Shao <script type="text/javascript">
+var today = new Date()
+var year = today.getFullYear()
+document.write(year)
+</script>, All Rights Reserved </small></div>
+    </footer>
   </body>
 </html>
