Adding animated close button to project display page

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Full Page Image Lander</title>
+  <title>RABBOT</title>
 
 
 
@@ -19,12 +19,23 @@
 </head>
 
 <body>
+
   <div class='wrapper'>
   	<div id='full-image'>
-      <h1>RABBOT</h1>
-      <p>Scroll down to see more.</p>
+      <div class='mouse-container'>
+        <div class='mouse'>
+          <span class='scroll-down'></span>
+        </div>
+      </div>
   	</div>
     <div id='content'>
+      <div id="closeicon">
+      <div class="outer">
+        <div class="inner">
+           <a href="portfolio.html"><label>Back</label></a>
+        </div>
+      </div>
+      </div>
       <img src="Projects/RABBOT/RABBOT_1.jpg" class='img_small'>
       <h1>RABBOT</h1>
       <h2>Summary</h2>
