Adding script to wait for all iamges loaded at portfolio page

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -21,7 +21,7 @@
 <body>
 
   <div class='wrapper'>
-  	<div id='full-image'>
+  	<div id='RABBOT'>
       <div class='mouse-container'>
         <div class='mouse'>
           <span class='scroll-down'></span>
