--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
       <div class="memo">Thesis project</div>
       <div class="date">2019 April</div>
     </div>
-  </div></a>
+  </div>
+  </a>
+  <a href="DiveIntoDigital.html">
   <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">DiveIntoDigital</div>
@@ -47,6 +49,7 @@
       <div class="date">2018 March</div>
     </div>
   </div>
+  </a>
   <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">The Hats</div>
@@ -118,7 +121,7 @@
 
 
     <script  src="js/portfolio.js"></script>
-
+    <script  src="js/LoadImage.js"></script>
 
 
 
