Trying another preload image method

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,14 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preload" href="Projects/RABBOT/RABBOT_1.jpg" as="image">
+  <link rel="preload" href="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" as="image">
+  <link rel="preload" href="Projects/UniverseConcert/UniverseConcert_1.JPG" as="image">
+  <link rel="preload" href="Projects/MoonGaze/MoonGaze.JPG" as="image">
+  <link rel="preload" href="Projects/LovMeLovU/LovMeLovU.JPG" as="image">
+  <link rel="preload" href="Projects/PollHUEtion/PollHUEtion.JPG" as="image">
+  <link rel="preload" href="Projects/Teleportation/Teleportation.jpg" as="image">
+  <link rel="preload" href="Projects/EmoLace/EmoLace.jpg" as="image">
 </head>
 
 <body>
@@ -121,7 +129,7 @@
 
 
     <script  src="js/portfolio.js"></script>
-    <script  src="js/LoadImage.js"></script>
+
 
 
 
