Resizing images and changing file type to webp

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,22 +6,6 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="preload" href="Projects/RABBOT/RABBOT_1.jpg" as="image">
-  <link rel="preload" href="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" as="image">
-  <link rel="preload" href="Projects/UniverseConcert/UniverseConcert_1.JPG" as="image">
-  <link rel="preload" href="Projects/MoonGaze/MoonGaze.JPG" as="image">
-  <link rel="preload" href="Projects/LovMeLovU/LovMeLovU.JPG" as="image">
-  <link rel="preload" href="Projects/PollHUEtion/PollHUEtion.JPG" as="image">
-  <link rel="preload" href="Projects/Teleportation/Teleportation.jpg" as="image">
-  <link rel="preload" href="Projects/EmoLace/EmoLace.jpg" as="image"> -->
-  <script>function preload(sources)
-{
-  var images = [];
-  for (i = 0, length = sources.length; i < length; ++i) {
-    images[i] = new Image();
-    images[i].src = sources[i];
-  }
-}</script>
 </head>
 
 <body>
@@ -49,7 +33,7 @@
 <div class="wrap">
   <div class="grid-sizer"></div>
   <a href="RABBOT.html">
-  <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT_1.jpg" alt=""/>
+  <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">RABBOT</div>
       <div class="memo">Thesis project</div>
@@ -66,56 +50,56 @@
     </div>
   </div>
   </a>
-  <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.jpg" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">The Hats</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert_1.JPG" alt=""/>
+  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">Universe Concert</div>
       <div class="memo">Plymouth University, UK</div>
       <div class="date">2015</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.JPG" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">Sleepers</div>
       <div class="memo">Social Body Lab, Toronto</div>
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.JPG" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">MoonGaze</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.JPG" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">LovMeLovU</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 December</div>
     </div>
   </div>
-  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.JPG" alt=""/>
+  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">PollHUEtion</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018 February</div>
     </div>
   </div>
-  <div class="grid-item Installation"><img src="Projects/Teleportation/Teleportation.jpg" alt=""/>
+  <div class="grid-item Installation"><img src="Projects/Teleportation/Teleportation.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">Teleportation</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.jpg" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">Emolace</div>
       <div class="memo">OCAD University, Toronto</div>
