--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
   </div>
   </a>
   <a href="DiveIntoDigital.html">
-  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital_1.JPG" alt=""/>
+  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital.webp" alt=""/>
     <div class="info-wrapper">
       <div class="name">DiveIntoDigital</div>
       <div class="memo">OCAD University, Toronto</div>
