--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 <div class="wrap">
   <div class="grid-sizer"></div>
   <a href="RABBOT.html">
-  <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT.webp" alt=""/>
+  <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">RABBOT</div>
       <div class="memo">Thesis project</div>
@@ -42,7 +42,7 @@
   </div>
   </a>
   <a href="DiveIntoDigital.html">
-  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital.webp" alt=""/>
+  <div class="grid-item MR"><img src="Projects/DiveIntoDigital/DiveIntoDigital.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">DiveIntoDigital</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -50,28 +50,28 @@
     </div>
   </div>
   </a>
-  <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.webp" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">The Hats</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert.webp" alt=""/>
+  <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">Universe Concert</div>
       <div class="memo">Plymouth University, UK</div>
       <div class="date">2015</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.webp" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Sleepers</div>
       <div class="memo">Social Body Lab, Toronto</div>
       <div class="date">2018 April</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.webp" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">MoonGaze</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -85,21 +85,21 @@
       <div class="date">2017 December</div>
     </div>
   </div>
-  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.webp" alt=""/>
+  <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">PollHUEtion</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018 February</div>
     </div>
   </div>
-  <div class="grid-item Installation"><img src="Projects/Teleportation/Teleportation.webp" alt=""/>
+  <div class="grid-item Installation"><img src="Projects/Teleportation/Teleportation.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Teleportation</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.webp" alt=""/>
+  <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Emolace</div>
       <div class="memo">OCAD University, Toronto</div>
