--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
       <div class="date">2017 November</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.webp" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">LovMeLovU</div>
       <div class="memo">OCAD University, Toronto</div>
