Sleepers loading error

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
       <div class="date">2015</div>
     </div>
   </div>
-  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.jpg" alt=""/>
+  <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">Sleepers</div>
       <div class="memo">Social Body Lab, Toronto</div>
