Adding pages for all projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,7 @@
     </div>
   </div>
   </a>
+  <a href="TheHats.html">
   <div class="grid-item Wearables"><img src="Projects/TheHats/TheHats.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">The Hats</div>
@@ -57,6 +58,8 @@
       <div class="date">2018 April</div>
     </div>
   </div>
+  </a>
+  <a href="UniverseConcert.html">
   <div class="grid-item MR"><img src="Projects/UniverseConcert/UniverseConcert.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">Universe Concert</div>
@@ -64,6 +67,8 @@
       <div class="date">2015</div>
     </div>
   </div>
+  </a>
+  <a href="Sleepers.html">
   <div class="grid-item Wearables IoT"><img src="Projects/Sleepers/Sleepers.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">Sleepers</div>
@@ -71,6 +76,8 @@
       <div class="date">2018 April</div>
     </div>
   </div>
+  </a>
+  <a href="MoonGaze.html">
   <div class="grid-item Wearables"><img src="Projects/MoonGaze/MoonGaze.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">MoonGaze</div>
@@ -78,6 +85,8 @@
       <div class="date">2017 November</div>
     </div>
   </div>
+  </a>
+  <a href="LovMeLovU.html">
   <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">LovMeLovU</div>
@@ -85,6 +94,8 @@
       <div class="date">2017 December</div>
     </div>
   </div>
+  </a>
+  <a href="PollHUEtion.html">
   <div class="grid-item Installation"><img src="Projects/PollHUEtion/PollHUEtion.JPG" alt=""/>
     <div class="info-wrapper">
       <div class="name">PollHUEtion</div>
@@ -92,6 +103,8 @@
       <div class="date">2018 February</div>
     </div>
   </div>
+  </a>
+  <a href="Teleportation.html">
   <div class="grid-item Installation"><img src="Projects/Teleportation/Teleportation.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Teleportation</div>
@@ -99,6 +112,8 @@
       <div class="date">2017 November</div>
     </div>
   </div>
+  </a>
+  <a href="EmoLace.html">
   <div class="grid-item Wearables"><img src="Projects/EmoLace/EmoLace.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">Emolace</div>
@@ -106,6 +121,8 @@
       <div class="date">2017 December</div>
     </div>
   </div>
+  </a>
+  <a href="Mai.html">
   <div class="grid-item Installation"><img src="Projects/Mai/Mai.gif" alt=""/>
     <div class="info-wrapper">
       <div class="name">Mai</div>
@@ -113,6 +130,7 @@
       <div class="date">2016</div>
     </div>
   </div>
+  </a>
   <div class="grid-item"><img src="" alt=""/></div>
 </div>
 
