Adding contents for The Hats

--- a/TheHats.html
+++ b/TheHats.html
@@ -41,19 +41,38 @@
       </div>
       <img src="Projects/TheHats/TheHats.jpg" class='img_small'>
       <h1>The Hats</h1>
+
       <h2>Summary</h2>
-  <p>The hats are the experiments of using circuit playground board. They can detect sound, movement and touch. It designed for women’s safeties when going home alone at evening, but it can also be worn for fun.
-
-Group members: Yiyi Shao, Feng Yuan</p>
-
+      <p>The hats are the experiments of using Circuit Playground board. They can detect sound, movement and touch. The Hats are designed for women’s safeties when going home alone at evening, but it can also be worn for fun.
+      </p>
+      <p>Group members: Yiyi Shao, Feng Yuan</p>
+      <p>My responsibilities: coding, physical making and video editing</p>
 
       <h2>Objective</h2>
-<p>...</p>
+      <p>The the final project, we choose to re-do our second project, the tap-to-blink knitting hat.
+        We choose to re-do this preview project for the following reasons:</p>
+      <ul>
+        <li>In our previous project, we tried really hard to make the circuit as small as possible. Ideally, the circuit of the hat should be entirely hidden and all wires would not impact on the comfortability. We hope we can polish this project to complete our initial goal in our final one.</li>
+        <li>In the previous project, the microcontroller we chosen was feather board. Even the feather board is small and light, it is not a ideal choice for wearable device. In our final project, we decided to move the whole circuit from feather to playground which has all built-in sensors and leds and accessible hooker for conductive thread.</li>
+        <li>In our third project, we added a haptic feedback driver to our top-to-blink knitting hat. We also would like to involved this haptic feedback into our final project. In this way, we can involve the tests about haptic feedback driver into this final one.</li>
+      </ul>
 
-<p>...</p>
+
+      <p>Comfortability/Wearability:</p>
+
+      <p>In our previous project, the pack of the circuit is kindly huge. Even we sew the whole thing on the back of the hat, it is still uncomfortable to wear. In the purpose of making the whole circuit light, small, and at the same time stable, we plan to use playground as the microcontroller. Since the playground itself embedded multiple sensors and works well with the conductive thread, it seems possible to create a flexible and also reliable circuit with it on our hat.
+
+      <p>Usability/Accessibility:</p>
+      <p>In our second project, we used the self-made sensor to trigger the leds. In the final one, we hope we can improve the prototype. We will use a vibration motor to create a haptic feedback. Since there are built-in sensors in circuit playground, we will also use these sensors to make the change of leds more diverse.
+      </p>
+      <p>Design Influence:</p>
+        <ul>
+<li>Based on the shape/structure of the hat, we run the conductive threads separately to make sure them won’t touched.</li>
+<li>We placed the led string in vertical so the hat won’t be stiff and hard to wear.</li>
+<li>We placed the circuit playground in the forehead to show the neopixel.</li>
+</ul>
       <h2>Action</h2>
-<p></p>
-      <h1 class='footer'>...</h1>
+
     </div>
   </div>
 </body>
