--- a/RABBOT.html
+++ b/RABBOT.html
@@ -4,22 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>RABBOT</title>
-
-
-
-      <link rel="stylesheet" href="css/style2.css">
-
-
+  <link rel="stylesheet" href="css/style2.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
-
-  <head>
-  <title>RABBOT</title>
-</head>
-
-<body>
-
   <div class='wrapper'>
   	<div id='RABBOT'>
       <div class='mouse-container'>
@@ -66,6 +55,8 @@ participating observers or ambient observers. </p>
       <h2>Action</h2>
       <img src="Projects/RABBOT/PrototypeMap.jpg" class='img_medium'>
       <img src="Projects/RABBOT/SystemDiagram.jpg" class='img_medium'>
+      <img src="Projects/RABBOT/Rabbot3D.png" class='img_medium'>
+      <img src="Projects/RABBOT/object.png" class='img_medium'>
 
       <h2>Exhibits</h2>
       <img src="Projects/RABBOT/TMAC.png" class='img_medium'>
@@ -80,10 +71,6 @@ participating observers or ambient observers. </p>
       <p class="caption"><i>Future Education Festival</i></p><p class="caption">Evergreen Brick Works, May 2019</p>
     </div>
   </div>
-</body>
-
-
-
 </body>
 
 </html>
