--- a/TheHats.html
+++ b/TheHats.html
@@ -4,22 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>The Hats</title>
-
-
-
-      <link rel="stylesheet" href="css/style2.css">
-
-
+  <link rel="icon" href="logo_White.png">
+  <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body>
-
-  <head>
-  <title>The Hats</title>
-</head>
-
-<body>
-
   <div class='wrapper'>
   	<div id='TheHats'>
       <div class='mouse-container'>
@@ -67,17 +56,20 @@
       </p>
       <p>Design Influence:</p>
         <ul>
-<li>Based on the shape/structure of the hat, we run the conductive threads separately to make sure them won’t touched.</li>
-<li>We placed the led string in vertical so the hat won’t be stiff and hard to wear.</li>
-<li>We placed the circuit playground in the forehead to show the neopixel.</li>
-</ul>
+          <li>Based on the shape/structure of the hat, we run the conductive threads separately to make sure them won’t touched.</li>
+          <li>We placed the led string in vertical so the hat won’t be stiff and hard to wear.</li>
+          <li>We placed the circuit playground in the forehead to show the neopixel.</li>
+        </ul>
       <h2>Action</h2>
-
+        <img src="Projects/TheHats/TheHats_1.JPG" class='img_medium'>
+        <img src="Projects/TheHats/TheHats_2.JPG" class='img_medium'>
+        <p>Self-Evaluation:</p>
+        <p>
+          The most difficult part is to transform all of the digital components from breadboard to the hat. We tried our best to make the circuit as less as possible. From the beginning, we decided to use the circuit playground with all sensors embedded instead of Feather M0. Although we have planned all of the positions for the rest of each part, we still messed up the circuit a lot of times while assembling the hat using conductive thread. The whole process is more like redo, redo and redo all over again to try to find problems and solutions to solve it. But I am really very happy with the final results and enjoyed exploring most of the functions of circuit playground board. Moreover, the main goals of our final project have been achieved. Firstly, the goal of reducing the weight to improve the wearability. Secondly, the goal of trying to combine all interesting contents from previous workshops.
+For the future development of this project, I think there is a lot of potentials. I personally would like to wear it as my daily outfit, specifically for meeting or presentation as our initial design. I would like to see how people react to my body language and comment about it to help to improve the next iteration.
+        </p>
     </div>
   </div>
-</body>
-
-
 
 </body>
 
