--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
