Adding Mai, LovMeLovU, MoonGaze, Sleepers and PollHUEtion

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -32,7 +32,7 @@
       <img src="Projects/RABBOT/RABBOT.gif" class='img_medium'>
       <img src="Projects/RABBOT/RABBOT2.gif" class='img_medium'>
   <p>This thesis project explores the possibilities of generating shared awareness in a virtual reality (VR) experience between a head-mounted display (HMD) wearer and other observers in the same physical space by merging wearable technology, augmented reality, asymmetric game design and wireless communications in the internet of things (IoT). The final outcome of this thesis project, RABBOT, features a modified VR head-mounted display and three-player asymmetric mobile game experiences with an embedded communication system to create opportunities for shared awareness amongst players. In the game, the participating observers can play cooperatively as Scientists to against the HMD wearer who is playing the Rabbot. Overall this thesis project argues that an engaging VR experience should not focus exclusively on the HMD wearer but also include other audiences to address and engage the relationships and interactions between them.</p>
-
+  <p>Full thesis paper can be found at <a href="http://openresearch.ocadu.ca/id/eprint/2512/">here</a></p>
 
       <h2>Objective</h2>
 <p>The isolating design of virtual reality (VR) head-mounted displays (HMD) is typical
