--- a/LovMeLovU.html
+++ b/LovMeLovU.html
@@ -4,22 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>LovMeLovU</title>
-
-
-
-      <link rel="stylesheet" href="css/style2.css">
-
-
+  <link rel="stylesheet" href="css/style2.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
-
-  <head>
-  <title>LovMeLovU</title>
-</head>
-
-<body>
-
   <div class='wrapper'>
   	<div id='LovMeLovU'>
       <div class='mouse-container'>
@@ -44,24 +33,30 @@
       <h2>Summary</h2>
   <p>
     LuvMeLuvU is a set of two smart pillows designed for long distance relationship. They can detect and send the user’s missing to their caring one in any corner of the world. The progress bar on the pillows can let them know how much they currently miss each other. When both of the users are in the same Missing Level, synced vibrations from two pillows will get closer to their hearts.
-The luvMeLuvU pillows incorporated Particle Photon, touch sensing with conductive threads, 3D printing and other digital components. This project is trying to present the idea of calm technology and also finding a way to embed rigid hardware in a soft and ubiquitous object in daily life.
-
-Group members: Yiyi Shao, Jad Rabbaa, Sean Harkin
+The luvMeLuvU pillows incorporated Particle Photon, touch sensing with conductive threads, 3D printing and other digital components.
   </p>
+  <p>Group members: Yiyi Shao, Jad Rabbaa, Sean Harkin</p>
+  <p>Full working diary can be found at <a href="https://trello.com/b/af8zZWfd/luv-me-luv-u-3">here</a></p>
+  <p>My responsibilities: coding</p>
 
 
       <h2>Objective</h2>
-<p>...</p>
+      <p>This project is trying to present the idea of calm technology and also finding a way to embed rigid hardware in a soft and ubiquitous object in daily life by using Internet of Things technology.</p>
 
-<p>...</p>
       <h2>Action</h2>
-<p></p>
-      <h1 class='footer'>...</h1>
-    </div>
-  </div>
-</body>
-
-
+      <p>
+      Each photon board connected to one potentiometer sensor and three LED. One potentiometer will control the other one's LED.
+      We set three range of values from potentiometer sensor, which represents the three different levels.</p>
+      <ul>
+      <li>Level 1: LED1 blinks</li>
+      <li>Level 2: LED1 LED2 blinks</li>
+      <li>Level 3: LED1 LED2 LED3 blinks</li>
+    </ul>
+        <img src="Projects/LovMeLovU/LovMeLovU_2.JPG" class='img_medium'>
+        <img src="Projects/LovMeLovU/LovMeLovU_3.JPG" class='img_medium'>
+        <h2>Exhibits</h2>
+        <img src="Projects/LovMeLovU/LovMeLovU_4.JPG" class='img_medium'>
+        <p class="caption"><i>DF Open Show</i></p><p class="caption">OCAD University, February 2018</p>
 
 </body>
 
